@@ -10,7 +10,9 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: clock.test,v 1.19 2002/05/29 09:08:43 hobbs Exp $
+# RCS: @(#) $Id: clock.test,v 1.20 2002/06/26 13:42:23 rmax Exp $
+
+set env(LC_TIME) POSIX
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
